# ghostkeys

./: .editorconfig  .gitignore  2025-12-05-building-ghostkeys-with-kiro.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  ls-dates.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflow/: ci.yml
.github/workflows/: changelog.yml  ci.yml  release.yml
.kiro/: context_manifest.json
.kiro/hooks/: quality-control.json
.kiro/settings/: mcp.json
.kiro/specs/exobrain/: design.md  requirements.md  tasks.md
.kiro/specs/ghostkeys/: design.md  requirements.md  tasks.md
.kiro/steering/: libraries.md
docs/: conversation-summary.md  cross-compilation.md  library-research.md
docs/adr/: 0001-use-windows-rs-for-keyboard-hooks.md  0002-position-based-mapping-strategy.md  0003-thread-local-mapper-state.md  0004-cargo-xwin-for-cross-compilation.md  001-use-windows-rs-for-keyboard-hooks.md  002-position-based-mapping-strategy.md  003-thread-local-mapper-state.md  004-cargo-xwin-for-cross-compilation.md  README.md  template.md
skills/: translation.md
src/: error.rs  interceptor.rs  lib.rs  main.rs  mapper.rs  state.rs
src/platform/: linux.rs  mod.rs  windows.rs
tests/: mapper_properties.rs  state_tests.rs
