[package]
name = "ghostkeys"
version = "0.1.0"
edition = "2021"
description = "ABNT2 keyboard layout emulation on US keyboards"
license = "Apache-2.0"
repository = "https://github.com/yourusername/ghostkeys"

[dependencies]
# UI and event loop (cross-platform)
tao = "0.30"
tray-icon = "0.17"

# Error handling
thiserror = "2.0"

# Platform-specific keyboard hooks
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]}

# TODO: Review alternatives. Is there a security problem with `rdev`?
# [target.'cfg(target_os = "linux")'.dependencies]
# rdev = "0.5"

[dev-dependencies]
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
strip = true

